added readme plus working on finally being able to work on the servos

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,8 @@ Adafruit-PCA9685
 Adafruit-PlatformDetect
 Adafruit-PureIO
 jmespath
-pkg-resources
+# pkg-resources
+setuptools
 pyftdi
 pyserial
 pyusb
